[package]
name = "PROJECT2"
version = "0.1.0"
authors = ["Nelson Chan <chakflying@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.7.0"
clap = "2.33.0"
ipnet = "2.0.0"
unix_socket = { git = "https://github.com/dkl/unix-socket", branch = "seqpacket" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
